crates/test-files/fixtures/compile_errors/not_callable.fe
contract Foo {
    event MyEvent {
        x: u8
    }

    fn call_int() {
        5()
    }

    fn call_event() {
        MyEvent(x: 10)
    }

    fn call_self(self) {
        self()
    }
}
